created drop down menu

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modern Dropdown Menu</title>
+</head>
+<body>
+    <div class="container">
+        <!-- Container for horizontally stacked dropdowns -->
+    <div class="dropdown-container">
+
+        <!-- Example Dropdown Menu 1 -->
+        <div class="dropdown" id="dropdown1">
+            <button class="dropdown-toggle">Menu 1</button>
+            <div class="dropdown-content">
+                <div class="dropdown-section">
+                    <h3>Section 1</h3>
+                    <a href="#">Item 1</a>
+                    <a href="#">Item 2</a>
+                    <a href="#">Item 3</a>
+                </div>
+                <div class="dropdown-section">
+                    <h3>Section 2</h3>
+                    <a href="#">Item 4</a>
+                    <a href="#">Item 5</a>
+                    <a href="#">Item 6</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Example Dropdown Menu 2 -->
+        <div class="dropdown" id="dropdown2">
+            <button class="dropdown-toggle">Menu 2</button>
+            <div class="dropdown-content">
+                <div class="dropdown-section">
+                    <h3>Section 3</h3>
+                    <a href="#">Item 7</a>
+                    <a href="#">Item 8</a>
+                    <a href="#">Item 9</a>
+                </div>
+                <div class="dropdown-section">
+                    <h3>Section 4</h3>
+                    <a href="#">Item 10</a>
+                    <a href="#">Item 11</a>
+                    <a href="#">Item 12</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- image slider -->
+    <div class="image-slider-container">
+        <div class="image-slider">
+            <div class="image-slider-backward"><</div>
+            <div class="image" id="image 1">image 1</div>
+            <div class="image" id="image 2">image 2</div>
+            <div class="image" id="image 3">image 3</div>
+            <div class="image" id="image 4">image 4</div>
+            <div class="image" id="image 5">image 5</div>
+            <div class="image-slider-forward">></div>
+        </div>
+        <div class="image-slider-navigation-circles">O O O O O</div>
+    </div>
+    </div>
+</body>
 </html>
