created slide show

--- a/src/index.html
+++ b/src/index.html
@@ -50,17 +50,13 @@
     </div>
 
     <!-- image slider -->
-    <div class="image-slider-container">
-        <div class="image-slider">
-            <div class="image-slider-backward"><</div>
-            <div class="image" id="image 1">image 1</div>
-            <div class="image" id="image 2">image 2</div>
-            <div class="image" id="image 3">image 3</div>
-            <div class="image" id="image 4">image 4</div>
-            <div class="image" id="image 5">image 5</div>
-            <div class="image-slider-forward">></div>
+    <div class="image-slider-container" id="image-slider-container-1">
+        <div class="image-slider" id="image-slider-1">
+            <div class="image-slider-action image-slider-backward">&#10094;</div>
+            <div class="image-slider-action image-slider-forward">&#10095;</div>
         </div>
-        <div class="image-slider-navigation-circles">O O O O O</div>
+        <div class="image-slider-navigation-circles">
+        </div>
     </div>
     </div>
 </body>
